--- a/include/_entete.inc.html
+++ b/include/_entete.inc.html
@@ -6,6 +6,7 @@
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <link href="./styles/styles.css" rel="stylesheet" type="text/css" />
         <link href="./bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
+        <script type="application/x-javascript"> addEventListener("load", function() { setTimeout(hideURLbar, 0); }, false); function hideURLbar(){ window.scrollTo(0,1); } </script>
 
         <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
     </head>
