--- a/include/_entete.inc.html
+++ b/include/_entete.inc.html
@@ -11,7 +11,7 @@
     <body>
         <div id="page">
             <div id="entete">
-                <a href="../ProjetA2DF/cAccueil.php">
+                <a href="../a2dfinformatique/cAccueil.php">
                     <img src="./images/logo.png" id="logoA2DF" alt="A2DFInformatique" title="Page d'accueil" />
                 </a>  
             </div>
