--- a/include/_entete.inc.html
+++ b/include/_entete.inc.html
@@ -2,7 +2,7 @@
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
     <head>
-        <title>Gestion A2DFInformatique</title>
+        <title>A2DF Informatique</title>
         <meta http-equiv="content-type" content="text/html; charset=utf-8" />
         <link href="./styles/styles.css" rel="stylesheet" type="text/css" />
         <link href="./bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
