--- a/include/_entete.inc.html
+++ b/include/_entete.inc.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="fr" lang="fr">
     <head>
         <title>A2DF Informatique</title>
-        <meta http-equiv="content-type" content="text/html; charset=utf-8" />
+        <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
         <link href="./styles/styles.css" rel="stylesheet" type="text/css" />
         <link href="./bootstrap/css/bootstrap.css" rel="stylesheet" type="text/css" />
         <link rel="shortcut icon" type="image/x-icon" href="./images/favicon.ico" />
